# claude-code-rewind

./: .gitignore  CLAUDE_CODE_2.0_INTEGRATION.md  CLAUDE_INTEGRATION.md  COMPLETE_ROADMAP.md  HOOKS_API_REFERENCE.md  INSTALLATION.md  INVESTIGATION_FINDINGS.md  KNOWN_ISSUES.md  NATIVE_CHECKPOINTS_COMPARISON.md  NATIVE_HOOKS_GUIDE.md  NATIVE_HOOKS_INTEGRATION.md  NEW_FEATURE.md  PERFORMANCE_FEATURES.md  PERFORMANCE_OPTIMIZATIONS.md  PR_DESCRIPTION.md  README.md  USAGE_GUIDE.md  USER_EXPERIENCE_COMPARISON.md  V1.5_IMPLEMENTATION_PLAN.md  V1.5_V2.0_REVISED_ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_performance_test.py  test_installation.sh  test_integration.py  test_performance_features.py
.claude/: claude.md
.kiro/specs/claude-rewind-tool/: design.md  requirements.md  tasks.md
claude_rewind/: __init__.py
claude_rewind/cli/: __init__.py  main.py
claude_rewind/core/: __init__.py  config.py  diff_viewer.py  interfaces.py  models.py  rollback_engine.py  snapshot_engine.py  timeline.py
claude_rewind/hooks/: __init__.py  base.py  claude_hook_manager.py  claude_interceptor.py  context.py  manager.py
claude_rewind/hooks/plugins/: git_hook.py
claude_rewind/native_hooks/: __init__.py  events.py  handlers.py  registration.py
claude_rewind/rollback/: analyzer.py
claude_rewind/storage/: __init__.py  auto_cleanup.py  database.py  file_store.py  migrations.py
claude_rewind/web/: __init__.py  server.py
claude_rewind/web/api/: __init__.py  routes.py
claude_rewind/web/templates/: index.html
scripts/: performance_demo.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_database.py  test_diff_cli.py  test_diff_cli_simple.py  test_diff_viewer.py  test_file_store.py  test_models.py  test_performance.py  test_rollback_cli.py  test_rollback_engine.py  test_smart_rollback.py  test_snapshot_engine.py  test_timeline.py
tests/hooks/: __init__.py  test_hook_system.py
tests/hooks/plugins/: __init__.py  test_hook.py
tests/rollback/: __init__.py  test_analyzer.py
